[package]
name = "nano-rs"
version = "0.1.0"
authors = ["michaelk <michael@12ab.pw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.62"
serde_derive = "1.0.123"
serde = "1.0.123"
reqwest = { version = "0.11.0", features = ["blocking", "json"] }
strum = "0.20.0"
strum_macros = "0.20.1"
enum_str = "0.1.2"